@@ -58,6 +58,15 @@
     </p>
 
     <p>
+    [% IF prefs.is_admin %]
+      <input type="checkbox" id="is_admin" name="is_admin" value="1" checked />
+    [% ELSE %]
+      <input type="checkbox" id="is_admin" name="is_admin" value="1" />
+    [% END %]
+    <label for="show_minor">Show admin related links</label>
+    </p>
+
+    <p>
       [% IF prefs.track_recent_changes_views %]
         <input type="checkbox" id="track_recent_changes_views" name="track_recent_changes_views" value="1" checked="1" />
       [% ELSE %]
@@ -144,6 +153,10 @@
     be included in navbar.
   </p>
 
+  <p>Admin links will
+    [% UNLESS prefs.is_admin %] not [% END %]
+    be included in navbar.
+  </p>
   <p>Minor edits
     [% UNLESS show_minor_edits_in_rc %] not [% END %]
   included in Recent Changes.</p>
